--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -20,7 +20,7 @@
       "TOKEN": "REPLACE_WITH_TOKEN"
     },
     "local": {
-      "API_BASE_URL": "https://6c5anfpt9d.execute-api.ap-southeast-2.amazonaws.com",
+      "API_BASE_URL": "https://xxxxxxxxxx.execute-api.ap-southeast-2.amazonaws.com",
       "X_API_KEY": "secret1"
     },
   }
